framec_tests/language_specific/rust/v3_facade_smoke/negative/forward_with_args.frm
@target rust

system S {
    machine:
        $A {
            e() {
                __frame_forward(1);
            }
        }
}

